--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
 Api_URL=/api/v1
-ConnectionString=mongodb+srv://kishorkabadi:Hrudhwika26722@cluster0.rpsjrx7.mongodb.net/eshop-database?retryWrites=true&w=majority
+ConnectionString=mongodb+srv://kishorkabadi:<password>@cluster0.rpsjrx7.mongodb.net/eshop-database?retryWrites=true&w=majority
